[gd_scene load_steps=3 format=3 uid="uid://jd8sr0orxoe2"]

[ext_resource type="Script" uid="uid://erj2jkel5cjs" path="res://scenes/mod_creator_ui/mod_creator.gd" id="1_scs6g"]
[ext_resource type="Theme" uid="uid://bxng31jcwi6bd" path="res://resources/main_theme.tres" id="2_yxfj6"]

[node name="ModCreator" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
script = ExtResource("1_scs6g")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="SetupContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MetadataContainer" type="VBoxContainer" parent="MarginContainer/SetupContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/SetupContainer/MetadataContainer"]
layout_mode = 2
text = "Metadata"

[node name="TitleType" type="LineEdit" parent="MarginContainer/SetupContainer/MetadataContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Title"
caret_blink = true

[node name="AuthorType" type="LineEdit" parent="MarginContainer/SetupContainer/MetadataContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Author"
caret_blink = true

[node name="DescriptionType" type="TextEdit" parent="MarginContainer/SetupContainer/MetadataContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Description"
caret_blink = true

[node name="PreviewContainer" type="HBoxContainer" parent="MarginContainer/SetupContainer/MetadataContainer"]
layout_mode = 2

[node name="AddPreviewButton" type="Button" parent="MarginContainer/SetupContainer/MetadataContainer/PreviewContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Set Preview Image"

[node name="ClearPreviewButton" type="Button" parent="MarginContainer/SetupContainer/MetadataContainer/PreviewContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Clear"

[node name="AssetContainer" type="VBoxContainer" parent="MarginContainer/SetupContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/SetupContainer/AssetContainer"]
layout_mode = 2
text = "Mod Data"

[node name="AfsContainer" type="HBoxContainer" parent="MarginContainer/SetupContainer/AssetContainer"]
layout_mode = 2

[node name="AddAfsButton" type="Button" parent="MarginContainer/SetupContainer/AssetContainer/AfsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Add AFS Assets"

[node name="ClearAfsButton" type="Button" parent="MarginContainer/SetupContainer/AssetContainer/AfsContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Clear"

[node name="Tm2Container" type="HBoxContainer" parent="MarginContainer/SetupContainer/AssetContainer"]
layout_mode = 2

[node name="AddTm2Button" type="Button" parent="MarginContainer/SetupContainer/AssetContainer/Tm2Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Add Global Textures"

[node name="ClearTm2Button" type="Button" parent="MarginContainer/SetupContainer/AssetContainer/Tm2Container"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Clear"

[node name="PnachContainer" type="HBoxContainer" parent="MarginContainer/SetupContainer/AssetContainer"]
layout_mode = 2

[node name="AddPnachButton" type="Button" parent="MarginContainer/SetupContainer/AssetContainer/PnachContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Add PNACH Patches"

[node name="ClearPnachButton" type="Button" parent="MarginContainer/SetupContainer/AssetContainer/PnachContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Clear"

[node name="IpsContainer" type="HBoxContainer" parent="MarginContainer/SetupContainer/AssetContainer"]
layout_mode = 2

[node name="AddIpsButton" type="Button" parent="MarginContainer/SetupContainer/AssetContainer/IpsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Add IPS patches"

[node name="ClearIpsButton" type="Button" parent="MarginContainer/SetupContainer/AssetContainer/IpsContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Clear"

[node name="FooterPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_yxfj6")
theme_type_variation = &"Footer"

[node name="HBoxContainer" type="HBoxContainer" parent="FooterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 2

[node name="SaveButton" type="Button" parent="FooterPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
disabled = true
text = "Save as..."
